After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681117 - curlfilesink: memory leaks in unit tests
curlfilesink: memory leaks in unit tests
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.11.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-03 09:45 UTC by Patricia Muscalu
Modified: 2012-08-03 21:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
curlfilesink: memory leaks in unit tests (910 bytes, patch)
2012-08-03 09:45 UTC, Patricia Muscalu
committed Details | Review

Description Patricia Muscalu 2012-08-03 09:45:24 UTC
Created attachment 220216 [details] [review]
curlfilesink: memory leaks in unit tests

Fixed memory leaks in unit tests.
Comment 1 Tim-Philipp Müller 2012-08-03 19:33:17 UTC
commit a7037cd0e30fa59d26627fac27241e33d543c10c
Author: Patricia Muscalu <patricia@axis.com>
Date:   Fri Aug 3 11:31:00 2012 +0200

    curl: fixed some memory leaks in the plugin and the unit tests
    
    https://bugzilla.gnome.org/show_bug.cgi?id=681117
    https://bugzilla.gnome.org/show_bug.cgi?id=681115