curl: fixed some memory leaks in the plugin and the unit tests

https://bugzilla.gnome.org/show_bug.cgi?id=681117
https://bugzilla.gnome.org/show_bug.cgi?id=681115